--- a/TP1/css/my_style.css
+++ b/TP1/css/my_style.css
@@ -12,6 +12,7 @@
 .fondo-movil{
     background-repeat: no-repeat;
     position: fixed;
+    background-size:cover;
     top: 0;
     left: 0;
     width: 100%;
