--- a/TP1/css/my_style.css
+++ b/TP1/css/my_style.css
@@ -9,15 +9,18 @@
     background-image: url(../img/fondo/fo1.jpg);
 }
 
-.fondo-movil{
+.fondo-fijo{
     background-repeat: no-repeat;
+    background-attachment: fixed;  
+    background-size: cover;
+    /* background-repeat: no-repeat;
     position: fixed;
     background-size:cover;
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    z-index: -1; /* Asegura que la imagen esté detrás del contenido */
+    height: 100%; */
+    /* z-index: -1; /*Asegura que la imagen esté detrás del contenido */
 }
 
 .presentacion{
@@ -74,7 +77,7 @@
 /*  */
 
 /* consulta-producto.html file */
-#fondo_formulario{
+#fondo-img-formulario{
     background-image: url(../img/fondo/fo3.jpg);    
 }
 
